# arc-agi-3-local-play

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  pixi.toml  play.py  pyproject.toml
.github/workflows/: test.yml
.pixi/: config.toml
.trae/documents/: api-and-scoreboard.md  arrow-keys-and-mouse-plan.md  code-quality-fix-plan.md  frame-sync-fix.md  human-agent-dual-mode-framework.md  human-player-system-plan.md  multi-playthrough-level-select.md  official-recording-and-player-system.md  open-source-preparation-plan-v2.md  open-source-preparation-plan.md  pixi-mirror-and-cross-platform.md  pygame-migration-plan.md  pygame-ui-optimization-plan.md  risk-isolation-plan.md  sync-mode-plan.md
.trae/rules/: commit-rule.md  global-config-rule.md  trashbin-rule.md
docs/: README.md  actions-reference.md  agent-development.md  api-key-and-leaderboard.md  ci-cd-guide.md  game-mechanics.md  guide.md  human-player-guide.md  human-player-tech-report.md  human-vs-ai.md  rest-api.md  scoring-system.md
human_player/: __main__.py  agent_base.py  config.py  game_manager.py  game_sync.py  level_manager.py  menu.py  mode.py  mouse.py  official_recording.py  player_manager.py  recording.py  renderer.py  stats_manager.py
tests/: test_config.py  test_level_manager.py  test_mode.py  test_player_manager.py  test_recording.py  test_stats_manager.py
