[project]
name = "arc-agi-3-human-player"
version = "0.1.0"
description = "A local desktop client for playing ARC-AGI-3 games"
requires-python = ">=3.12"
license = "MIT"

[tool.setuptools.packages.find]
include = ["human_player*"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = ["E501", "SIM102", "SIM115", "SIM116"]

[tool.ruff.lint.isort]
known-first-party = ["human_player"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
